gcc/testsuite/rust/rustc/ui/issues/issue-56031.rs
struct T;

impl for T {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

